solve problem CSRF token mismatche and Authenticated
